--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_bloc: ^3.2.0
   shared_preferences: ^0.5.6+3
   equatable: ^1.1.1
+  meta: ^1.1.8
 
 dev_dependencies:
   flutter_test:
