--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -27,6 +27,7 @@ dependencies:
   shared_preferences: ^0.5.6+3
   equatable: ^1.1.1
   meta: ^1.1.8
+  http: ^0.12.0+4
 
 dev_dependencies:
   flutter_test:
