--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_bloc: ^3.2.0
   shared_preferences: ^0.5.6+3
   equatable: ^1.1.1
   http: ^0.12.0+4
+  flutter_redux: ^0.6.0
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +47,22 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/ic_app_name.png
+    - assets/images/alc.jpg
+    - assets/images/order.png
+    - assets/images/ghoul.jpg
+    - assets/images/hox.jpg
+    - assets/images/str2.jpg
+    - assets/images/nk.jpg
+    - assets/images/js.png
+    - assets/images/owner.png
+    - assets/images/p2.png
+    - assets/images/jojo.jpg
+    - assets/images/tra.jpg
+    - assets/images/flix.png
+    - assets/images/alclogo.png
+    - assets/images/obli.jpg
+    - assets/images/ourplanet.jpg
+    - assets/images/sabrina.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
