--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   equatable: ^1.1.1
   http: ^0.12.0+4
   flutter_redux: ^0.6.0
+  video_player: ^0.10.11
+
 
 dev_dependencies:
   flutter_test:
