--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
   equatable: ^1.1.1
   http: ^0.12.0+4
   flutter_redux: ^0.6.0
-  video_player: ^0.10.11
+  video_player: ^0.10.11+1
+  jaguar_jwt: ^2.1.6
 
 
 dev_dependencies:
